k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - name: portal
        image: jahangir842/portal:latest
        ports:
        - containerPort: 5000
