k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-service
spec:
  selector:
    app: portal
  type: NodePort
  ports:
  - protocol: TCP
    port: 8000        # Port users will access
    targetPort: 5000  # Port exposed by the container
    nodePort: 30081   # Optional, explicit nodePort
